log/build_2026-04-02_18-14-40/ur3_movement/stderr.log
  File "/home/daniel-choate/paml_ros2/install/ur3_movement/lib/python3.12/site-packages/ur3_movement/move_end_eff.py", line 8
    from moveit_msgs.msg import MotionPlanRequest, JointConstraint, Constraints, 
                                                                                 ^
SyntaxError: trailing comma not allowed without surrounding parentheses

